# tokyo-stock-exchange

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
samples/: sample_code.py
tokyo_stock_exchange/: tse.csv  tse.py  tse20240229.csv
