[project]
name = "tokyo-stock-exchange"
version = "0.0.3"
authors = [
  { name="AKB428", email="otoraru@gmail.com" },
]                            
description = "A Python library for accessing Tokyo Stock Exchange data."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AKB428/tokyo-stock-exchange"
Issues = "https://github.com/AKB428/tokyo-stock-exchange/issues"

[tool.package_data]
# Specify package data files to include in the distribution
tokyo_stock_exchange = ["*.csv"]